Jeu_de_tests/error/redefinition_local_local.tpc
/* local - local */

int main(void){
    int b, b;
    return 0;
}
